--- a/frontend/src/app/registration-and-signin/registration-and-signin.component.html
+++ b/frontend/src/app/registration-and-signin/registration-and-signin.component.html
@@ -77,23 +77,25 @@
 
                       <div class="tab-pane fade" id="nav-events" role="tabpanel" aria-labelledby="nav-events-tab">
                           <h6>Welcome! Sign in.</h6>
-                          <form action="#" method="get">
-                              <div class = "container">
-                                  <div class = "row">
-                                    <div class="form-group col-sm-4">
-                                        <label for="email">Email*: </label>
-                                        <input name="email" id="email" />
-                                    </div>
-                                    <div class="form-group col-sm-4">
-                                      <label for="passwordS">Pass*: </label>
-                                      <input name="passwordS" id="passwordS" />
-                                    </div>
-                                    <div class = "col-sm-4">
-                                      <button type="submit" class="btn dorne-btn">Sign in</button>
-                                    </div>
+                          <form  class="Login" (submit) ="validateLogin()">
+                            <div class = "container">
+                                <div class = "row">
+                                  <div class="form-group col-sm-4">
+                                    <label for="email">E-mail*:</label>
+                                    <input type = "email" name="email" id="email" [(ngModel)] = "user.email" #email = "ngModel"/>
+                                    <div *ngIf = "emailRequired" class="alert alert-danger" style = "margin-top: 2%; font-size: 10px">Invalid email.</div>
+                                  </div>
+                                  <div class="form-group col-sm-4">
+                                      <label for="passwordS">Pass*:</label>
+                                      <input name="passwordS" id="passwordS" type = "password" [(ngModel)] = "user.password" #password = "ngModel"/>
+                                      <div *ngIf = "passwordRequired" class="alert alert-danger" style = "margin-top: 2%; font-size: 10px">Password is required, min length - 8 charachters, max length - 30 characters. </div>
+                                  </div>
+                                  <div class = "col-sm-4">
+                                    <button type="submit" class="btn dorne-btn">Sign in</button>
                                   </div>
                                 </div>
-                          </form>
+                              </div>
+                        </form>
                       </div>
                   </div>
               </div>
