Isto kao i proslo

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -20,6 +20,7 @@
 @import 'css/others/owl.carousel.min.css';
 @import 'css/others/font-awesome.min.css';
 @import 'css/others/pe-icon-7-stroke.css';
+@import 'css/toastr/style.css';
 
 /* Base CSS */
 
